UltimaX Math Library/Source/UXMath/UXMath.h

//    |œœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœ|
//    |œœ                  Vector 2 Prototypes                   œœ|
//    |œœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœ|


_declspec(dllexport) bool  _stdcall V2_Zero(D3DVECTOR2& Vector);
_declspec(dllexport) bool  _stdcall V2_Negate(D3DVECTOR2& Vector);
_declspec(dllexport) float _stdcall V2_Magnitude(D3DVECTOR2& Vector);
_declspec(dllexport) bool  _stdcall V2_Normalize(D3DVECTOR2& Vector);
_declspec(dllexport) float _stdcall V2_MagnitudeSquared(D3DVECTOR2& Vector);
_declspec(dllexport) bool  _stdcall V2_Copy(D3DVECTOR2& retVector, D3DVECTOR2& Vector);
_declspec(dllexport) bool  _stdcall V2_Scale(D3DVECTOR2& retVector, D3DVECTOR2& Vector, float ScaleAmount);
_declspec(dllexport) bool  _stdcall V2_Minimize(D3DVECTOR2& retVector, D3DVECTOR2& Vector1, D3DVECTOR2& Vector2);
_declspec(dllexport) bool  _stdcall V2_Maximize(D3DVECTOR2& retVector, D3DVECTOR2& Vector1, D3DVECTOR2& Vector2);
_declspec(dllexport) float _stdcall V2_Distance(D3DVECTOR2& Vector1, D3DVECTOR2& Vector2);
_declspec(dllexport) int   _stdcall V2_FastDistance(D3DVECTOR2& Vector1, D3DVECTOR2& Vector2);
_declspec(dllexport) bool  _stdcall V2_TwoVectorsAreNearlyEqual(D3DVECTOR2& Vector1, D3DVECTOR2& Vector2);
_declspec(dllexport) bool  _stdcall V2_ComputeBoundingBox(D3DVECTOR2 *Vertices, long NumVertices, D3DVECTOR2& retBox_Min, D3DVECTOR2& retBox_Max);
_declspec(dllexport) bool  _stdcall V2_ComputeBoundingSphere(D3DVECTOR2 *Vertices, long NumVertices, D3DVECTOR2& retSphereCenter, float retSphereRadius);
_declspec(dllexport) bool  _stdcall V2_VectorContainedInBoundingBox(D3DVECTOR2& Vector, D3DVECTOR2& Box_Min, D3DVECTOR2& Box_Max);
_declspec(dllexport) bool  _stdcall V2_IsCollision(D3DVECTOR2& Collider_Position, float Collider_Radius, D3DVECTOR2& Object_Position, float Object_Radius);
_declspec(dllexport) bool  _stdcall V2_IsCollisionEX(D3DVECTOR2& Collider_Position, float Collider_Radius, D3DVECTOR2& Object_Position, float Object_Radius);
_declspec(dllexport) bool  _stdcall V2_Interpolate_Linear(D3DVECTOR2 *retVector, float Time, D3DVECTOR2 *KeyFrame1, D3DVECTOR2 *KeyFrame2);
_declspec(dllexport) bool  _stdcall V2_Interpolate_LinearEX(D3DVECTOR2 *retVertices, long NumVertices, float Time, D3DVECTOR2 *KeyFrame1, D3DVECTOR2 *KeyFrame2);
_declspec(dllexport) bool  _stdcall V2_Interpolate_HermitSpline(D3DVECTOR2 *retVector, float Time, D3DVECTOR2 *KeyFrame1, D3DVECTOR2 *KeyFrame2, D3DVECTOR2 *KeyFrame3, D3DVECTOR2 *KeyFrame4);
_declspec(dllexport) bool  _stdcall V2_Interpolate_HermitSplineEX(D3DVECTOR2 *retVertices, long NumVertices, float Time, D3DVECTOR2 *KeyFrame1, D3DVECTOR2 *KeyFrame2, D3DVECTOR2 *KeyFrame3, D3DVECTOR2 *KeyFrame4);
_declspec(dllexport) bool  _stdcall V2_Add(D3DVECTOR2& retVector, D3DVECTOR2& Vector1, D3DVECTOR2& Vector2);
_declspec(dllexport) bool  _stdcall V2_Average(D3DVECTOR2& retVector, D3DVECTOR2& Vector1, D3DVECTOR2& Vector2);
_declspec(dllexport) float _stdcall V2_DotProduct(D3DVECTOR2& Vector1, D3DVECTOR2& Vector2);
_declspec(dllexport) bool  _stdcall V2_Subtract(D3DVECTOR2& retVector, D3DVECTOR2& Vector1, D3DVECTOR2& Vector2);
_declspec(dllexport) bool  _stdcall V2_DivideSV(D3DVECTOR2& retVector, float Scalar, D3DVECTOR2& Vector);
_declspec(dllexport) bool  _stdcall V2_DivideVS(D3DVECTOR2& retVector, D3DVECTOR2& Vector, float Scalar);
_declspec(dllexport) bool  _stdcall V2_DivideVV(D3DVECTOR2& retVector, D3DVECTOR2& Vector1, D3DVECTOR2& Vector2);
_declspec(dllexport) bool  _stdcall V2_MultiplySV(D3DVECTOR2& retVector, float Scalar, D3DVECTOR2& Vector);
_declspec(dllexport) bool  _stdcall V2_MultiplyVS(D3DVECTOR2& retVector, D3DVECTOR2& Vector, float Scalar);
_declspec(dllexport) float _stdcall V2_MultiplyVV(D3DVECTOR2& Vector1, D3DVECTOR2& Vector2);
//    |œœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœ|
//    |œœ                  Vector 3 Prototypes                   œœ|
//    |œœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœ|


_declspec(dllexport) bool   _stdcall V3_Zero(D3DVECTOR& Vector);
_declspec(dllexport) bool   _stdcall V3_Negate(D3DVECTOR& Vector);
_declspec(dllexport) float  _stdcall V3_Magnitude(D3DVECTOR& Vector);
_declspec(dllexport) bool   _stdcall V3_Normalize(D3DVECTOR& Vector);
_declspec(dllexport) float  _stdcall V3_MagnitudeSquared(D3DVECTOR& Vector);
_declspec(dllexport) bool   _stdcall V3_Copy(D3DVECTOR& retVector, D3DVECTOR& Vector);
_declspec(dllexport) bool   _stdcall V3_Scale(D3DVECTOR& retVector, D3DVECTOR& Vector, float ScaleAmount);
_declspec(dllexport) bool   _stdcall V3_Minimize(D3DVECTOR& retVector, D3DVECTOR& Vector1, D3DVECTOR& Vector2);
_declspec(dllexport) bool   _stdcall V3_Maximize(D3DVECTOR& retVector, D3DVECTOR& Vector1, D3DVECTOR& Vector2);
_declspec(dllexport) bool   _stdcall V3_TwoVectorsAreNearlyEqual(D3DVECTOR2& Vector1, D3DVECTOR2& Vector2);
_declspec(dllexport) bool   _stdcall V3_Add(D3DVECTOR& retVector, D3DVECTOR& Vector1, D3DVECTOR& Vector2);
_declspec(dllexport) bool   _stdcall V3_Average(D3DVECTOR& retVector, D3DVECTOR& Vector1, D3DVECTOR& Vector2);
_declspec(dllexport) float  _stdcall V3_DotProduct(D3DVECTOR& Vector1, D3DVECTOR& Vector2);
_declspec(dllexport) bool   _stdcall V3_Subtract(D3DVECTOR& retVector, D3DVECTOR& Vector1, D3DVECTOR& Vector2);
_declspec(dllexport) bool   _stdcall V3_DivideSV(D3DVECTOR& retVector, float Scalar, D3DVECTOR& Vector);
_declspec(dllexport) bool   _stdcall V3_DivideVS(D3DVECTOR& retVector, D3DVECTOR& Vector, float Scalar);
_declspec(dllexport) bool   _stdcall V3_DivideVV(D3DVECTOR& retVector, D3DVECTOR& Vector1, D3DVECTOR& Vector2);
_declspec(dllexport) bool   _stdcall V3_MultiplySV(D3DVECTOR& retVector, float Scalar, D3DVECTOR2& Vector);
_declspec(dllexport) bool   _stdcall V3_MultiplyVS(D3DVECTOR& retVector, D3DVECTOR& Vector, float Scalar);
_declspec(dllexport) float  _stdcall V3_MultiplyVV(D3DVECTOR& Vector1, D3DVECTOR& Vector2);
_declspec(dllexport) float  _stdcall V3_ScalarProduct(D3DVECTOR& Vector1, D3DVECTOR& Vector2, D3DVECTOR& Vector3);
_declspec(dllexport) bool   _stdcall V3_Spherical(D3DVECTOR& retVector, float Theta, float Rho, float Phi);
_declspec(dllexport) bool   _stdcall V3_CrossProduct(D3DVECTOR& retVector, D3DVECTOR& Vector1, D3DVECTOR& Vector2);
_declspec(dllexport) bool   _stdcall V3_Power(D3DVECTOR& retVector, D3DVECTOR& Vector1, D3DVECTOR& Vector2);
_declspec(dllexport) double _stdcall V3_AngleBetweenVectors(D3DVECTOR& Vector1, D3DVECTOR& Vector2);
_declspec(dllexport) bool   _stdcall V3_PolygonNormal(D3DVECTOR& retVector, D3DVECTOR& Polygon1, D3DVECTOR& Polygon2, D3DVECTOR& Polygon3);