UltimaX Math Library/UXMath VB APIs/UXMath.bas

Attribute VB_Name = "UXMath"
  '|¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶|'
  '|¶¶               ©2002 Ariel Productions               ¶¶|'
  '|¶¶                 All Rights Reserved                 ¶¶|'
  '|¶¶¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¶¶|'
  '|¶¶             Programmer - James Dougherty            ¶¶|'
  '|¶¶             First Compile - 11.21.02                ¶¶|'
  '|¶¶             Source - UXMath.bas                     ¶¶|'
  '|¶¶             Object - N/A                            ¶¶|'
  '|¶¶             Version - 1.0                           ¶¶|'
  '|¶¶             Description - UltimaX Math Library      ¶¶|'
  '|¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶|'
  '|¶¶                                                     ¶¶|'
  '|¶¶ UXMath is free software; you can redistribute       ¶¶|'
  '|¶¶ it and/or modify it under the terms of the GNU      ¶¶|'
  '|¶¶ General Public License as published by the Free     ¶¶|'
  '|¶¶ Software Foundation; either version 2 of the        ¶¶|'
  '|¶¶ License, or (at your option) any later version.     ¶¶|'
  '|¶¶                                                     ¶¶|'
  '|¶¶ This program is distributed in the hope that it     ¶¶|'
  '|¶¶ will be useful, but WITHOUT ANY WARRANTY; without   ¶¶|'
  '|¶¶ even the implied warranty of MERCHANTABILITY or     ¶¶|'
  '|¶¶ FITNESS FOR A PARTICULAR PURPOSE.  See the GNU      ¶¶|'
  '|¶¶ General Public License for more details.            ¶¶|'
  '|¶¶                                                     ¶¶|'
  '|¶¶ You should have received a copy of the GNU General  ¶¶|'
  '|¶¶ Public License along with UltimaX; if not, write to ¶¶|'
  '|¶¶ the Free Software Foundation, Inc., 59 Temple       ¶¶|'
  '|¶¶ Place, Suite 330, Boston, MA 02111-1307  USA        ¶¶|'
  '|¶¶                                                     ¶¶|'
  '|¶¶¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¶¶|'
  '|¶¶        http://www.gnu.org/copyleft/gpl.html         ¶¶|'
  '|¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶¶|'
  
  
Option Explicit


'This is needed since DX does not have 3x3 Matrix support.
Public Type D3DMATRIX3
 m11 As Single: m12 As Single: m13 As Single
 m21 As Single: m22 As Single: m23 As Single
 m31 As Single: m32 As Single: m33 As Single
End Type


'===VECTOR 2==============================================================================
'-----------------------------------------------------------------------------------------

'Vector Math/Manipulation Functions
Public Declare Function V2_Zero Lib "UXMath.dll" (ByRef Vector As D3DVECTOR2) As Boolean
Public Declare Function V2_Negate Lib "UXMath.dll" (ByRef Vector As D3DVECTOR2) As Boolean
Public Declare Function V2_Magnitude Lib "UXMath.dll" (ByRef Vector As D3DVECTOR2) As Single
Public Declare Function V2_Normalize Lib "UXMath.dll" (ByRef Vector As D3DVECTOR2) As Boolean
Public Declare Function V2_MagnitudeSquared Lib "UXMath.dll" (ByRef Vector As D3DVECTOR2) As Single
Public Declare Function V2_Copy Lib "UXMath.dll" (ByRef retVector As D3DVECTOR2, ByRef Vector As D3DVECTOR2) As Boolean
Public Declare Function V2_Scale Lib "UXMath.dll" (ByRef retVector As D3DVECTOR2, ByRef Vector As D3DVECTOR2, ByVal ScaleAmount As Single) As Boolean
Public Declare Function V2_Minimize Lib "UXMath.dll" (ByRef retVector As D3DVECTOR2, ByRef Vector1 As D3DVECTOR2, ByRef Vector2 As D3DVECTOR2) As Boolean
Public Declare Function V2_Maximize Lib "UXMath.dll" (ByRef retVector As D3DVECTOR2, ByRef Vector1 As D3DVECTOR2, ByRef Vector2 As D3DVECTOR2) As Boolean
Public Declare Function V2_Add Lib "UXMath.dll" (ByRef retVector As D3DVECTOR2, ByRef Vector1 As D3DVECTOR2, ByRef Vector2 As D3DVECTOR2) As Boolean
Public Declare Function V2_Average Lib "UXMath.dll" (ByRef retVector As D3DVECTOR2, ByRef Vector1 As D3DVECTOR2, ByRef Vector2 As D3DVECTOR2) As Boolean
Public Declare Function V2_DotProduct Lib "UXMath.dll" (ByRef Vector1 As D3DVECTOR2, ByRef Vector2 As D3DVECTOR2) As Single
Public Declare Function V2_Subtract Lib "UXMath.dll" (ByRef retVector As D3DVECTOR2, ByRef Vector1 As D3DVECTOR2, ByRef Vector2 As D3DVECTOR2) As Boolean
Public Declare Function V2_DivideSV Lib "UXMath.dll" (ByRef retVector As D3DVECTOR2, ByVal Scalar As Single, ByRef Vector As D3DVECTOR2) As Boolean
Public Declare Function V2_DivideVS Lib "UXMath.dll" (ByRef retVector As D3DVECTOR2, ByRef Vector As D3DVECTOR2, ByVal Scalar As Single) As Boolean
Public Declare Function V2_DivideVV Lib "UXMath.dll" (ByRef retVector As D3DVECTOR2, ByRef Vector1 As D3DVECTOR2, ByRef Vector2 As D3DVECTOR2) As Boolean
Public Declare Function V2_MultiplySV Lib "UXMath.dll" (ByRef retVector As D3DVECTOR2, ByVal Scalar As Single, ByRef Vector As D3DVECTOR2) As Boolean
Public Declare Function V2_MultiplyVS Lib "UXMath.dll" (ByRef retVector As D3DVECTOR2, ByRef Vector As D3DVECTOR2, ByVal Scalar As Single) As Boolean
Public Declare Function V2_MultiplyVV Lib "UXMath.dll" (ByRef Vector1 As D3DVECTOR2, ByRef Vector2 As D3DVECTOR2) As Single

'Collision Detection Functions
Public Declare Function V2_Distance Lib "UXMath.dll" (ByRef Vector1 As D3DVECTOR2, ByRef Vector2 As D3DVECTOR2) As Single
Public Declare Function V2_FastDistance Lib "UXMath.dll" (ByRef Vector1 As D3DVECTOR2, ByRef Vector2 As D3DVECTOR2) As Integer
Public Declare Function V2_TwoVectorsAreNearlyEqual Lib "UXMath.dll" (ByRef Vector1 As D3DVECTOR2, ByRef Vector2 As D3DVECTOR2) As Boolean
Public Declare Function V2_IsCollision Lib "UXMath.dll" (ByRef Collider_Position As D3DVECTOR2, ByVal Collider_Radius As Single, ByRef Object_Position As D3DVECTOR2, ByVal Object_Radius As Single) As Boolean
Public Declare Function V2_IsCollisionEX Lib "UXMath.dll" (ByRef Collider_Position As D3DVECTOR2, ByVal Collider_Radius As Single, ByRef Object_Position As D3DVECTOR2, ByVal Object_Radius As Single) As Boolean
Public Declare Function V2_ComputeBoundingBox Lib "UXMath.dll" (ByRef Vertices As D3DVECTOR2, ByVal NumVertices As Long, ByRef retBox_Min As D3DVECTOR2, ByRef retBox_Max As D3DVECTOR2) As Boolean
Public Declare Function V2_ComputeBoundingSphere Lib "UXMath.dll" (ByRef Vertices As D3DVECTOR2, ByVal NumVertices As Long, ByRef retSphereCenter As D3DVECTOR2, ByRef retSphereRadius As Single) As Boolean
Public Declare Function V2_VectorContainedInBoundingBox Lib "UXMath.dll" (ByRef Vector As D3DVECTOR2, ByRef Box_Min As D3DVECTOR2, ByRef Box_Max As D3DVECTOR2) As Boolean
 
'Vector Interpolation Functions
Public Declare Function V2_Interpolate_Linear Lib "UXMath.dll" (ByRef retVector As D3DVECTOR2, ByVal Time As Single, ByRef KeyFrame1 As D3DVECTOR2, ByRef KeyFrame2 As D3DVECTOR2) As Boolean
Public Declare Function V2_Interpolate_LinearEX Lib "UXMath.dll" (ByRef retVertices As D3DVECTOR2, ByVal NumVertices As Long, ByVal Time As Single, ByRef KeyFrame1 As D3DVECTOR2, ByRef KeyFrame2 As D3DVECTOR2) As Boolean
Public Declare Function V2_Interpolate_HermitSpline Lib "UXMath.dll" (ByRef retVector As D3DVECTOR2, ByVal Time As Single, ByRef KeyFrame1 As D3DVECTOR2, ByRef KeyFrame2 As D3DVECTOR2, ByRef KeyFrame3 As D3DVECTOR2, ByRef KeyFrame4 As D3DVECTOR2) As Boolean
Public Declare Function V2_Interpolate_HermitSplineEX Lib "UXMath.dll" (ByRef retVertices As D3DVECTOR2, ByVal NumVertices As Long, ByVal Time As Single, ByRef KeyFrame1 As D3DVECTOR2, ByRef KeyFrame2 As D3DVECTOR2, ByRef KeyFrame3 As D3DVECTOR2, ByRef KeyFrame4 As D3DVECTOR2) As Boolean


'===VECTOR 3==============================================================================
'-----------------------------------------------------------------------------------------


'Math/Manipulation Functions
Public Declare Function V3_Zero Lib "UXMath.dll" (ByRef Vector As D3DVECTOR) As Boolean
Public Declare Function V3_Negate Lib "UXMath.dll" (ByRef Vector As D3DVECTOR) As Boolean
Public Declare Function V3_Magnitude Lib "UXMath.dll" (ByRef Vector As D3DVECTOR) As Single
Public Declare Function V3_Normalize Lib "UXMath.dll" (ByRef Vector As D3DVECTOR) As Boolean
Public Declare Function V3_MagnitudeSquared Lib "UXMath.dll" (ByRef Vector As D3DVECTOR) As Single
Public Declare Function V3_Copy Lib "UXMath.dll" (ByRef retVector As D3DVECTOR, ByRef Vector As D3DVECTOR) As Boolean
Public Declare Function V3_Scale Lib "UXMath.dll" (ByRef retVector As D3DVECTOR, ByRef Vector As D3DVECTOR, ByVal ScaleAmount As Single) As Boolean
Public Declare Function V3_Minimize Lib "UXMath.dll" (ByRef retVector As D3DVECTOR, ByRef Vector1 As D3DVECTOR, ByRef Vector2 As D3DVECTOR) As Boolean
Public Declare Function V3_Maximize Lib "UXMath.dll" (ByRef retVector As D3DVECTOR, ByRef Vector1 As D3DVECTOR, ByRef Vector2 As D3DVECTOR) As Boolean
Public Declare Function V3_Add Lib "UXMath.dll" (ByRef retVector As D3DVECTOR, ByRef Vector1 As D3DVECTOR, ByRef Vector2 As D3DVECTOR) As Boolean
Public Declare Function V3_Average Lib "UXMath.dll" (ByRef retVector As D3DVECTOR, ByRef Vector1 As D3DVECTOR, ByRef Vector2 As D3DVECTOR) As Boolean
Public Declare Function V3_DotProduct Lib "UXMath.dll" (ByRef Vector1 As D3DVECTOR, ByRef Vector2 As D3DVECTOR) As Single
Public Declare Function V3_Subtract Lib "UXMath.dll" (ByRef retVector As D3DVECTOR, ByRef Vector1 As D3DVECTOR, ByRef Vector2 As D3DVECTOR) As Boolean
Public Declare Function V3_DivideSV Lib "UXMath.dll" (ByRef retVector As D3DVECTOR, ByVal Scalar As Single, ByRef Vector As D3DVECTOR) As Boolean
Public Declare Function V3_DivideVS Lib "UXMath.dll" (ByRef retVector As D3DVECTOR, ByRef Vector As D3DVECTOR, ByVal Scalar As Single) As Boolean
Public Declare Function V3_DivideVV Lib "UXMath.dll" (ByRef retVector As D3DVECTOR, ByRef Vector1 As D3DVECTOR, ByRef Vector2 As D3DVECTOR) As Boolean
Public Declare Function V3_MultiplySV Lib "UXMath.dll" (ByRef retVector As D3DVECTOR, ByVal Scalar As Single, ByRef Vector As D3DVECTOR) As Boolean
Public Declare Function V3_MultiplyVS Lib "UXMath.dll" (ByRef retVector As D3DVECTOR, ByRef Vector As D3DVECTOR, ByVal Scalar As Single) As Boolean
Public Declare Function V3_MultiplyVV Lib "UXMath.dll" (ByRef Vector1 As D3DVECTOR, ByRef Vector2 As D3DVECTOR) As Single
Public Declare Function V3_ScalarProduct Lib "UXMath.dll" (ByRef Vector1 As D3DVECTOR, ByRef Vector2 As D3DVECTOR, ByRef Vector3 As D3DVECTOR) As Single
Public Declare Function V3_Spherical Lib "UXMath.dll" (ByRef retVector As D3DVECTOR, ByVal Theta As Single, ByVal Rho As Single, ByVal Phi As Single) As Boolean
Public Declare Function V3_CrossProduct Lib "UXMath.dll" (ByRef retVector As D3DVECTOR, ByRef Vector1 As D3DVECTOR, ByRef Vector2 As D3DVECTOR) As Boolean
Public Declare Function V3_Power Lib "UXMath.dll" (ByRef retVector As D3DVECTOR, ByRef Vector1 As D3DVECTOR, ByRef Vector2 As D3DVECTOR) As Boolean
Public Declare Function V3_PolygonNormal Lib "UXMath.dll" (ByRef retVector As D3DVECTOR, ByRef Polygon1 As D3DVECTOR, ByRef Polygon2 As D3DVECTOR, ByRef Polygon3 As D3DVECTOR) As Boolean
Public Declare Function V3_AngleBetweenVectors Lib "UXMath.dll" (ByRef Vector1 As D3DVECTOR, ByRef Vector2 As D3DVECTOR) As Double
Public Declare Function V3_TwoVectorsAreNearlyEqual Lib "UXMath.dll" (ByRef Vector1 As D3DVECTOR, ByRef Vector2 As D3DVECTOR) As Boolean
